--- a/src/containers/Everything/Everything.css
+++ b/src/containers/Everything/Everything.css
@@ -14,3 +14,17 @@
     color: rgb(129, 129, 129);
     padding-left: 10px;
 }
+
+.Button {
+    padding: 10px 20px;
+    background-color: transparent;
+    color: grey;
+    cursor: pointer;
+    border: none;
+    transition: all .2s;
+    font-size: 20px;
+}
+
+.Button:focus {
+    outline: none;
+}
