--- a/src/components/Headline/Headline.css
+++ b/src/components/Headline/Headline.css
@@ -2,9 +2,22 @@
     width: 20%;
     height: auto;
     margin: 50px;
+    background-color: rgba(255, 255, 255, 0.774);
     padding: 50px;
     border: 1px solid gray;
     box-shadow: 0 4px 25px 2px rgba(0,0,0,0.2);
+}
+
+.Read {
+    text-decoration: none;
+    font-size: 20px;
+    padding: 10px;
+    color: grey;
+    transition: all .2s;
+}
+
+.Read:hover {
+    color: rgb(68, 68, 68);
 }
 
 img {
